--- a/simple-todos.html
+++ b/simple-todos.html
@@ -5,11 +5,20 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>Do things.</h1>
+			<h1>Do things. ({{incompleteCount}})</h1>
 			
-			<form class="new-task">
-				<input type="text" name="text" placeholder="Type to add new tasks" />
-			</form>
+			<label class="hide-completed">
+				<input type="checkbox" checked="{{hideCompleted}}" />
+				Hide Completed Tasks
+			</label>
+			
+			{{> loginButtons}}
+			
+			{{#if currentUser}}
+				<form class="new-task">
+					<input type="text" name="text" placeholder="Type to add new tasks" />
+				</form>
+			{{/if}}
 		</header>
 		
 		<ul>
@@ -24,6 +33,6 @@
 	<li class="{{#if checked}}checked{{/if}}">
 		<button class="delete">&times;</button>
 		<input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-		<span class="text">{{text}}</span>
+		<span class="text"><strong>{{username}}</strong> - {{text}}</span>
 	</li>
 </template>
